--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=exo1
 server.port=8081
 
 ## Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/coucou
+spring.datasource.url=jdbc:postgresql://localhost:5432/exo_spring_boot
 spring.datasource.username=postgres
 spring.datasource.password=root
 
